fix stacking contexts so that animations are always visible

--- a/eldritch/style.css
+++ b/eldritch/style.css
@@ -139,7 +139,16 @@ button:disabled {
   z-index: 20;
 }
 #enteringscroll {
+  z-index: 25;
+  width: calc(min(80vw, 128vh));
+  max-width: calc(min(80vw, 128vh));
+  height: 78.6%;
+  position: absolute;
+  top: 0;
+  left: 0;
   justify-content: center;
+  align-items: center;
+  pointer-events: none;
 }
 .cardscrollbtn {
   font-size: calc(min(1.25vw, 2vh));
@@ -359,9 +368,10 @@ button:disabled {
   height: 100%;
   display: flex;
   flex-direction: row;
+  position: relative;
+  overflow: hidden;
 }
 #uiright {
-  position: relative;
   width: 20%;
   max-width: 20%;
   background: cornsilk;
@@ -371,11 +381,13 @@ button:disabled {
   justify-content: flex-start;
   align-items: center;
   max-height: min(62.5vw, 100vh);
-  overflow-x: hidden;
 }
 #tabs {
+  position: absolute;
+  right: 0;
+  bottom: 0;
   height: 5%;
-  width: 100%;
+  width: calc(min(20vw, 32vh));
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -398,36 +410,34 @@ button:disabled {
   background: cornsilk;
 }
 .rightelem {
+  position: absolute;
+  right: 0;
+  top: 0;
   min-height: 0;
   height: 95%;
-  width: 100%;
+  width: calc(min(20vw, 32vh));
   transition: transform 0.5s;
 }
 .rightelem.shown {
-  position: relative;
   transform: none;
 }
 .rightelem.notshown {
-  position: absolute;
-  left: 0;
-  top: 0;
-  transform: translate(105%, 0);
+  transform: translate(101%, 0);
 }
 #uichars {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  width: 100%;
 }
 #uichars.notshown {
-  transform: translate(-105%, 0);
+  transform: translate(-101%, 0);
 }
 #charoverlay {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: calc(min(20vw, 32vh));
   height: 0;
   pointer-events: none;
   z-index: 3;
@@ -483,12 +493,11 @@ button:disabled {
   background: #D2A253;
   display: flex;
   flex-direction: column;
-  position: relative;
 }
 #centerizer {
   z-index: 20;
-  width: 100%;
-  height: 100%;
+  width: min(80vw, 128vh);
+  height: min(62.5vw, 100vh);
   position: absolute;
   top: 0;
   left: 0;
@@ -515,6 +524,7 @@ button:disabled {
   max-height: 75%;
   background: #D2A253;
   position: relative;
+  z-index: 1;
 }
 #uibottom{
   flex: 1 1 auto;
@@ -523,6 +533,7 @@ button:disabled {
   max-height: 21.4%;
   display: flex;
   flex-direction: row;
+  z-index: 1;
 }
 #worlds {
   min-height: calc(min(62.5vw, 100vh) * 9 / 250);
@@ -531,7 +542,7 @@ button:disabled {
   width: min(80vw, 128vh);
   display: flex;
   flex-direction: row;
-  z-index: 1;
+  z-index: 2;
 }
 .world {
   position: relative;
